# phalnx

./: .env.example  .gitignore  .prettierignore  .sec3-allowlist.txt  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  ON-CHAIN-IMPLEMENTATION-PLAN.md  PRODUCTION_AUDIT.md  README.md  SECURITY.md  TASKS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json  tsconfig.json
.changeset/: audit-followup-remaining.md  config.json  lane-a-c2-c5.md  phase-7-audit-log-zero-copy-vault-mismatch.md  phase-9-sdk-redesign.md  pr-b-barrel-closeout.md  pr2b-type-consolidation.md  sdk-kit-build-unsigned-s21.md  sdk-kit-s10-s11-s12-owner-client-reads.md  sdk-phase1-trivial-convenience.md  sdk-phase1a-quick-wins.md  sigil-delete-is-spending-byte.md  sigil-delete-session-is-spending.md  sprint-2-finish-plugin-runner-hooks.md  update-flash-sdk.md  update-mcp-sdk.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  deploy-devnet.yml  devnet-test.yml  release.yml  revamp-ci.yml
.husky/: pre-push
apps/actions-server/: package.json
certora/conf/: agent_shield.conf  sigil.conf
docs/: ARCHITECTURE.md  AUDIT_SNAPSHOT_CADENCE.md  DEPLOYMENT.md  ERROR-CODES.md  INSTRUCTIONS.md  ONCHAIN-FEATURE-INVENTORY.md  PHASE_10_REDEPLOY_DONE.md  PHASE_10_TEST_CLEANUP.md  PROJECT.md  PROTOCOL-INTEGRATION-GUIDE.md  SECURITY-FINDINGS-2026-04-07.md  SECURITY.md  V1-LAUNCH-NOTES.md  V1-LAUNCH-RUNBOOK.md
docs/revamp/: ACCEPTANCE_V2.md  ERROR_CODE_ALLOCATION_V2.md  HARDENED_V2_PROMPT_MAP.md  INTERFACES_V2.md  PHASE_0_5_MEMORY_REFRESH.md  (+7 more)
programs/mock-defi/: Cargo.toml
programs/sigil/: Cargo.toml
programs/sigil/src/: errors.rs  events.rs  lib.rs
programs/sigil/src/certora/specs/: access_control.rs  session_lifecycle.rs
programs/sigil/src/instructions/: accept_ownership_transfer.rs  accept_ownership_transfer_multisig.rs  agent_transfer.rs  allocate_constraints_pda.rs  allocate_pending_constraints_pda.rs  apply_agent_grant.rs  apply_agent_permissions_update.rs  apply_close_constraints.rs  apply_constraints_update.rs  apply_pending_policy.rs  cancel_agent_grant.rs  cancel_agent_permissions_update.rs  cancel_close_constraints.rs  cancel_constraints_update.rs  cancel_ownership_transfer.rs  cancel_pending_policy.rs  cleanup_orphan_constraints_pda.rs  close_post_assertions.rs  close_vault.rs  create_escrow.rs  create_instruction_constraints.rs  create_post_assertions.rs  deposit_funds.rs  extend_pda.rs  finalize_session.rs  freeze_vault.rs  initialize_vault.rs  initiate_ownership_transfer.rs  mod.rs  pause_agent.rs  promote_graylist_destination.rs  queue_agent_grant.rs  queue_agent_permissions_update.rs  queue_close_constraints.rs  queue_constraints_update.rs  queue_policy_update.rs  reactivate_vault.rs  record_agent_violation.rs  refund_escrow.rs  register_agent.rs  (+8 more)
programs/sigil/src/instructions/integrations/: generic_constraints.rs  jupiter.rs  mod.rs  token2022_opcode_test.rs
programs/sigil/src/state/: agent_spend_overlay.rs  audit_log_rejected.rs  audit_log_success.rs  constraints.rs  mod.rs  pending_agent_grant.rs  pending_agent_perms.rs  pending_close_constraints.rs  pending_constraints.rs  pending_ownership_transfer.rs  pending_policy.rs  policy.rs  post_assertions.rs  session.rs  tracker.rs  vault.rs
programs/sigil/src/utils/: audit_log.rs  cosign_digest.rs  destination_check.rs  freeze_helper.rs  intent_digest.rs  mint_delta_cap.rs  mod.rs  policy_digest.rs  post_assertion_helpers.rs  token2022_extension.rs
scripts/: add-protocol.ts  regen-error-codes-doc.sh  run-certora.sh  test-counts.json  verify-codama-staleness.ts  verify-program.ts  verify-test-counts.js
tests/: agent-shield.ts  analytics-counters.ts  audit-log-burst.ts  audit-log-coverage.ts  audit-log.ts  close-vault-pending-drain.ts  cu-budget.ts  devnet-edge-cases.ts  devnet-fees.ts  devnet-oracle.ts  devnet-routing.ts  devnet-security.ts  devnet-sessions.ts  devnet-smoke.ts  devnet-spending.ts  devnet-timelock.ts  devnet-transfers.ts  escrow-integration.ts  f10-timelocked-admin.ts  flash-trade-integration.ts  instruction-constraints.ts  intent-digest-parity.ts  jupiter-integration.ts  jupiter-lend-integration.ts  missing-coverage.ts  ownership-transfer-multisig.ts  ownership-transfer.ts  pen-cross-1-absorption.ts  phalnx.ts  policy-digest-invariant.ts  post-assertions-r-variants.ts  post-assertions-sandwich.ts  sandwich-integration.ts  security-exploits.ts  sigil.ts  surfpool-integration.ts  sysvar-scan-bound.ts  toctou-security.ts
tests/fixtures/mock-defi-src/: Cargo.toml
tests/fixtures/mock-defi-src/src/: lib.rs
(+450 files in other folders)
