[package]
name = "sigil"
version = "0.1.0"
description = "On-chain guardrails for AI agents on Solana - Permission controls, spending limits, and audit infrastructure for autonomous agents (Sigil)"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "sigil"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["devnet"]
mainnet = []
devnet = []
devnet-testing = ["devnet"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
certora = ["no-entrypoint", "dep:cvlr"]

[dependencies]
# 2026-04-20 council (7-0 STRICT): exact-pin Anchor to prevent silent
# linearize() check-order shifts that could invalidate strict test
# assertions. CI gates any version bump via full test matrix rerun.
# See: MEMORY/WORK/20260420-201121_test-assertion-precision-council/COUNCIL_DECISION.md
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "=1.0.2", features = ["token", "associated_token"] }
solana-program = ">=2"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }

# Pin blake3 to avoid constant_time_eq 0.4.2 which requires edition 2024
# (BPF platform-tools cargo 1.84 doesn't support edition 2024)
blake3 = "=1.5.5"
cvlr = { version = "0.6", optional = true }

# NOTE: there is intentionally no `[dev-dependencies]` block.
#
# The third-pass audit added `spl-token-2022-interface = "3"` here to verify
# Token-2022 opcode discriminants against the canonical enum at compile time.
# That dep transitively pulls in `wincode 0.5.x` (via `solana-sha256-hasher
# 3.x`), which requires Rust `edition2024` and breaks Certora's pinned cargo
# v1.51 (Rust 1.84). Pinning `wincode-derive` to 0.4.3 isn't enough — the
# parent `wincode` 0.5.x is also edition-2024.
#
# Tradeoff: `integrations/token2022_opcode_test.rs` now uses inlined byte
# constants instead of canonical-enum verification. We lose the upstream
# rename signal but keep our internal regression guard. V1.1 backlog: re-add
# upstream verification via a separate test crate excluded from Certora's
# workspace build.

[package.metadata.certora]
sources = [
    "Cargo.toml",
    "src/**/*.rs"
]
solana_inlining = ["src/certora/envs/cvlr_inlining.txt"]
solana_summaries = ["src/certora/envs/cvlr_summaries.txt"]
