[package]
name = "mock-defi"
version = "0.2.0"
description = "Test-only mock DeFi program. Two no-op instructions (open_position, close_position) with stable 8-byte Anchor discriminators, plus drain_via_delegation that does a CPI SPL token transfer using the agent's validate-time delegation (used by Phase 6.1 sandwich integration tests to trigger R-1 MintDeltaCap + TA-14 per-recipient cap)."
edition = "2021"
license = "Apache-2.0"

# Intentionally standalone — NOT part of the top-level workspace. See root
# Cargo.toml for the detailed rationale (cargo-certora-sbf and feature-flag
# build compatibility). This empty [workspace] table declares this package
# as its own workspace root.
#
# The compiled binary lives as a committed fixture at
# tests/fixtures/mock-defi.so. To rebuild (rare — only when source in
# src/lib.rs changes): scripts/rebuild-mock-defi.sh
[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_defi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "=0.32.1" }
anchor-spl = { version = "=0.32.1", features = ["token"] }
# Pin blake3 to avoid constant_time_eq 0.4.2 which requires edition 2024
# (BPF platform-tools cargo 1.84 doesn't support edition 2024). Same pin
# as programs/sigil/Cargo.toml — required for any program that pulls in
# anchor-spl's transitive solana-program → blake3 dependency.
blake3 = "=1.5.5"
